fixed overflow issue when main grid was a random number (7 , 64, etc).
solution was that the area  per subdivision needed to be kept to 1 sig fig. 

Also simplified code a bit, going from a left + a right grid to a whole grid.

--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,14 @@
 }
 
 
+.whole {
+    display: flex;
+    flex-flow: column wrap;
+    height: 500px;
+    width: 500px;
+
+    /*border: 5px solid black;*/
+
+  
+}
+
